--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 
 <head>
     <meta charset="UTF-8">
@@ -10,7 +10,11 @@
 </head>
 
 <body>
-    <p>Kuśnierz Konin</p>
+    <div class="container">
+        <section class="jumbotron">
+
+        </section>
+    </div>
 </body>
 
 </html>
