--- a/index.html
+++ b/index.html
@@ -6,10 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Kuśnierz Konin</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Hind" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
+    <nav>
+        <img src="./images/logo--white.png">
+        <ul>
+            <li>Strona główna</li>
+            <li>Czym się zajmujemy?</li>
+            <li>Nasze usługi</li>
+            <li>Cennik</li>
+            <li>Galeria</li>
+            <li>Kontakt</li>
+        </ul>
+        <span>
+            <i class="fas fa-chevron-up"></i>
+            <p>Wróć</p>
+            <p>na górę</p>
+        </span>
+    </nav>
     <div class="container">
         <section class="jumbotron">
 
