--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Hind" rel="stylesheet">
+    <link rel="stylesheet" href="./vendor/owlcarousel/owl.carousel.min.css">
+    <link rel="stylesheet" href="./vendor/owlcarousel/owl.theme.default.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -29,11 +31,25 @@
             <p>na górę</p>
         </span>
     </nav>
-    <div class="container">
-        <section class="jumbotron">
-
-        </section>
-    </div>
+    <section class="jumbotron">
+        <img src="./images/logo-main.png" alt="" class="main-logo">
+        <div class="owl-carousel">
+            <div> <img src="./images/logo--.png" alt=""> </div>
+            <div> <img src="./images/logo--.png" alt=""> </div>
+            <div> <img src="./images/logo--.png" alt=""> </div>
+            <div> <img src="./images/logo--.png" alt=""> </div>
+            <div> <img src="./images/logo--.png" alt=""> </div>
+        </div>
+        <div class="main-contact">
+            <h3>Marek Bakalarski</h3>
+            <h4>608 45 53 53</h4>
+            <img src="./images/contact-arrow.svg" alt="">
+        </div>
+    </section>
 </body>
+
+<script src="./vendor/jquery-3.3.1.min.js"></script>
+<script src="./vendor/owlcarousel/owl.carousel.min.js"></script>
+<script src="script.js"></script>
 
 </html>
