Style section about

--- a/index.html
+++ b/index.html
@@ -46,6 +46,37 @@
             <img src="./images/contact-arrow.svg" alt="">
         </div>
     </section>
+    <section class="about">
+        <img src="./images/about-image.svg" alt="">
+        <div class="container">
+            <h5>Czym się zajmujemy?</h5>
+            <hr class="col-1">
+            <div class="spec">
+                <p class="main-text">Stosujemy materiały własne i powierzone przez klienta, takie jak:</p>
+                <hr class="col-3">
+                <p class="description"> skóry futerkowe, kożuchowe , licowe, zamszowe, oraz inne</br>
+                    skaj, skóra ekologiczna, inne dostępne materiały obiciowe, </br>
+                    tkaniny odzieżowe , sportowe, namiotowe, i inne specjalistyczne
+                </p>
+            </div>
+            <div class="spec">
+                <p class="main-text">Naprawiamy, czyścimy, poddajemy renowacji, szyjemy nowe oraz przerabiamy</p>
+                <hr class="col-3">
+                <p class="description">futra, kożuchy ,skóry licowe, zamszowe, odzież z grubych tkanin, </br>odzież
+                    motocyklową , sportową i specjalistyczną
+                </p>
+            </div>
+            <div class="spec">
+                <p class="main-text">Naprawiamy, wymieniamy tapicerkę;</p>
+                <hr class="col-3">
+                <p class="description">meblową , medyczną , gabinetów, hoteli, restauracji, hal, szkół
+                    miejsc użyteczności publicznej , itp.<br>
+                    w samochodach osobowych, ciężarowych, maszynach rolniczych i budowlanych</br>
+                    jachtach, łodziach oraz innego sprzętu pływającego
+                </p>
+            </div>
+        </div>
+    </section>
 </body>
 
 <script src="./vendor/jquery-3.3.1.min.js"></script>
