Add flex to about

--- a/index.html
+++ b/index.html
@@ -49,8 +49,10 @@
     <section class="about">
         <img src="./images/about-image.svg" alt="">
         <div class="container">
-            <h5>Czym się zajmujemy?</h5>
-            <hr class="col-1">
+            <div class="main-spec">
+                <h5>Czym się zajmujemy?</h5>
+                <hr class="col-1">
+            </div>
             <div class="spec">
                 <p class="main-text">Stosujemy materiały własne i powierzone przez klienta, takie jak:</p>
                 <hr class="col-3">
