Add some content and style to servives section

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             <li>Strona główna</li>
             <li>Czym się zajmujemy?</li>
             <li>Nasze usługi</li>
-            <li>Cennik</li>
             <li>Galeria</li>
+            <li>Ceniik</li>
             <li>Kontakt</li>
         </ul>
         <span>
@@ -76,6 +76,47 @@
                     w samochodach osobowych, ciężarowych, maszynach rolniczych i budowlanych</br>
                     jachtach, łodziach oraz innego sprzętu pływającego
                 </p>
+            </div>
+        </div>
+    </section>
+    <section class="services">
+        <div class="container">
+
+            <div class="tab">
+                <h2>Wykonujemy usługi: </h2>
+                <p class="tablinks" onclick="openCity(event, 'London')" id="defaultOpen">Kuśnierskie</p>
+                <p class="tablinks" onclick="openCity(event, 'Paris')">Krawieckie</p>
+                <p class="tablinks" onclick="openCity(event, 'Tokyo')">Tapicerskie</p>
+                <p class="tablinks" onclick="openCity(event, 'Tokyo')">Rymarskie</p>
+                <p class="tablinks" onclick="openCity(event, 'Tokyo')">Kaletnicze</p>
+            </div>
+            <div class="tab-services-content">
+                <div id="London" class="tabcontent">
+                    <h3>Kuśnierskie</h3>
+                    <img src="./images/services/banner-test.jpg" alt="">
+                </div>
+
+                <div id="Paris" class="tabcontent">
+                    <h3>Krawieckie</h3>
+                    <img src="./images/services/banner-test.jpg" alt="">
+                    <p>Paris is the capital of France.</p>
+                </div>
+
+                <div id="Tokyo" class="tabcontent">
+                    <h3>Tapicerskie</h3>
+                    <img src="./images/services/banner-test.jpg" alt="">
+                    <ul>
+                        <li>fotele, wypoczynki, narożniki, krzesła, pufy, sofy</li>
+                        <li>samochody osobowe, ciężarowe, maszyny rolnicze, tiry, sprzęt budowlany, (koparki, walce,
+                            ciągniki,)</li>
+                        <li>kłady, motory, </li>
+                        <li>łodzie, jachty , naprawa żagli </li>
+                        <li>Wykonujemy nowe pokrowce z kożucha lub połączenie kożucha z skórą licową dopasowane i
+                            profilowane z możliwością demontażu celem wyczyszczenia </li>
+                        <li>tapicerka meblowa hoteli, restauracji, gabinetów, hal, szkół, miejsc użyteczności
+                            publicznej, itp.</li>
+                    </ul>
+                </div>
             </div>
         </div>
     </section>
