Add style services section

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Hind" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Work+Sans:400,500,600,700,800,900" rel="stylesheet">
     <link rel="stylesheet" href="./vendor/owlcarousel/owl.carousel.min.css">
     <link rel="stylesheet" href="./vendor/owlcarousel/owl.theme.default.min.css">
     <link rel="stylesheet" href="css/style.css">
@@ -105,26 +106,77 @@
                     <img src="./images/services/li-style.svg" alt="">
                     <p class="tablinks-text">Rymarskie</p>
                 </div>
-                <div class="tablinks" onclick="openServices(event, 'Kaletnik')">
+                <div class="tablinks" onclick="openServices(event, 'Samochodowe')">
                     <img src="./images/services/li-style.svg" alt="">
-                    <p class="tablinks-text">Kaletnicze</p>
+                    <p class="tablinks-text">Samochodowe</p>
                 </div>
             </div>
             <div class="tab-services-content">
                 <div id="Kusnierz" class="tabcontent">
                     <h3 class="main-service">Kuśnierskie</h3>
                     <img src="./images/services/banner-test.jpg" alt="">
+                    <ul>
+                        <li>Odzież : futrzaną kożuchową skórzaną</li>
+                        <li>Naprawimy, przerobimy na modne fasony </li>
+                        <li>oraz uszyjemy nowe według własnych wzorów lub zamówień klienta: </li>
+                        <li>płaszcze, kurtki, kurtki, kurtki, kombinezony motocyklowe, pelisy, czapki, narzuty, błamy,
+                            szale futrzane, etole, mufki</li>
+                        <li>Realizujemy indywidualne i nietypowe zamówienia oraz projekty klienta</li>
+                        <li>Czyścimy oraz poddajemy procesom renowacji</li>
+                    </ul>
                 </div>
 
                 <div id="Medycyna" class="tabcontent">
                     <h3 class="main-service">Medycyna</h3>
                     <img src="./images/services/banner-test.jpg" alt="">
-                    <p>Paris is the capital of France.</p>
+                    <ul>
+                        <li>Naprawa i wymiana tapicerki:
+                            <ul>
+                                <li>foteli ginekologicznych</li>
+                                <li>foteli stomatologicznych</li>
+                                <li>kozetki</li>
+                                <li>leżanki</li>
+                                <li>stoły do masażu</li>
+                                <li>taborety</li>
+                                <li>krzesła</li>
+                            </ul>
+                        </li>
+                        <li>Wałki rehabilitacyjne
+                            <ul>
+                                <li>wałki pod szyje – głowę do badań usg, eeg, ekg</li>
+                                <li> wałki do masażu </li>
+                                <li>Różne kolory wzory (wymiary kształty) oraz twardości.</li>
+                            </ul>
+                        </li>
+                        <li>Stosowany materiał – skaj posiada atest medyczny</li>
+                        <li>Wykonujemy pokrowce i osłony zabezpieczające przed nadmiernym zużyciem.</li>
+
                 </div>
                 <div id="Krawiec" class="tabcontent">
                     <h3 class="main-service">Krawieckie</h3>
                     <img src="./images/services/banner-test.jpg" alt="">
-                    <p>Paris is the capital of France.</p>
+                    <ul>
+                        <li>
+                            Płaszcze, kurtki, marynarki z grubych materiałów <ul>
+                                <li>przeróbki na modne fasony,</li>
+                                <li>zwężamy</li>
+                                <li>dopasujemy w tali </li>
+                                <li>poszerzymy,</li>
+                                <li>naprawy uszkodzeń</li>
+                                <li>naszywanie plakietek na odzież sportową</li>
+                                <li>czyszczenie</li>
+                                <li>Oraz uszyjemy nowe według własnych wzorów lub zamówień klienta </li>
+                            </ul>
+                        </li>
+                        <li>wymiana <ul>
+                                <li>kołnierzy</li>
+                                <li>obszyć</li>
+                                <li>podszewki</li>
+                                <li>zapięć</li>
+                                <li>zamków specjalistycznych</li>
+                            </ul>
+                        </li>
+                    </ul>
                 </div>
                 <div id="Tapicer" class="tabcontent">
                     <h3 class="main-service">Tapicerskie</h3>
@@ -144,9 +196,26 @@
                 <div id="Rymarz" class="tabcontent">
                     <h3 class="main-service">Rymarz</h3>
                     <img src="./images/services/banner-test.jpg" alt="">
-                    <p>Paris is the capital of France.</p>
+                    <ul>
+                        <li>Naprawy <ul>
+                                <li>żagli</li>
+                                <li>toreb</li>
+                                <li>plecaków</li>
+                                <li>walizek</li>
+                                <li>neseserów</li>
+                                <li>pokrowców</li>
+                            </ul>
+                        </li>
+                        <li>Wymiany <ul>
+                                <li>skóry i innych materiałów galanterii metalowej</li>
+                                <li>dorabianie dziurek i oczek</li>
+                                <li>wymiana podszewek i zamków w torebkach namiotach i śpiworach </li>
+                                <li>nowe pokrowce wg zamówień klienta</li>
+                            </ul>
+                        </li>
+                    </ul>
                 </div>
-                <div id="Kaletnik" class="tabcontent">
+                <div id="Samochodowe" class="tabcontent">
 
                     <h3 class="main-service">Kaletnik</h3>
                     <img src="./images/services/banner-test.jpg" alt="">
